assets/css/main_style.css
/* UTILITIES */
/* =========================================== */
/* UTILITIES / NORMALIZE */
/* =========================================== */
* {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* html, body {
    overflow-x: hidden;
}
*/
/* =========================================== */
/* UTILITIES / MIXINS */
/* =========================================== */
/* =========================================== */
/* UTILITIES / QUERIES */
/* =========================================== */
/* X-SM  <576>  SM <768>  MD  <992> LG  <1200> XL */
/* =========================================== */
/* UTILITIES / COLORS */
/* =========================================== */
:root {
  --theme-color_important: #e40000;
  --theme-color_neutral: white;
  --theme-color_discret: #b0b0b0;
  --theme-color_background: #1c1c1c;
  --theme-color_brand: white;
}

.white {
  color: var(--theme-color_neutral);
}

/* =========================================== */
/* UTILITIES / VARIABLES */
/* =========================================== */
/* =========================================== */
/* UTILITIES / ANIMATIONS */
/* =========================================== */
@-webkit-keyframes apparition {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes apparition {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@-webkit-keyframes neon {
  0% {
    text-shadow: none;
  }
  25% {
    text-shadow: 0 0 0.5rem var(--theme-color_neutral);
  }
  50% {
    text-shadow: 0 0 3rem var(--theme-color_neutral);
  }
  100% {
    text-shadow: 0 0 1rem var(--theme-color_neutral);
  }
}

@keyframes neon {
  0% {
    text-shadow: none;
  }
  25% {
    text-shadow: 0 0 0.5rem var(--theme-color_neutral);
  }
  50% {
    text-shadow: 0 0 3rem var(--theme-color_neutral);
  }
  100% {
    text-shadow: 0 0 1rem var(--theme-color_neutral);
  }
}

.flex_row {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

@media screen and (min-width: 767.9px) {
  .flex_2col-md {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -ms-flex-wrap: nowrap;
        flex-wrap: nowrap;
    -webkit-box-pack: start;
        -ms-flex-pack: start;
            justify-content: flex-start;
    -ms-flex-line-pack: center;
        align-content: center;
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: flex-start;
  }
  .flex_2col-md > * {
    width: 50%;
  }
}

/* BASE */
/* =========================================== */
/* BASE / base */
/* =========================================== */
/* HERE HTML-TAGS ONLY , it should not contain class, id , or else */
a:-webkit-any-link {
  text-decoration: none;
}
a:-moz-any-link {
  text-decoration: none;
}
a:any-link {
  text-decoration: none;
}

li {
  list-style-type: none;
}

/*
img {
    width: 100%;
}
*/
/* =========================================== */
/* BASE / fonts */
/* =========================================== */
body {
  /* font-family: sans-serif; */
  font-family: 'Overpass', sans-serif;
  font-size: 1.2rem;
  font-style: normal;
  /* or italic */
  font-variant: normal;
  /* or small-cap */
}

.white {
  color: var(--theme-color_neutral);
}

/* LAYOUTS */
/* =========================================== */
/* LAYOUTS / body */
/* =========================================== */
body {
  height: 100vh;
  width: 100vw;
  display: -ms-grid;
  display: grid;
  -ms-grid-rows: auto 1fr auto;
      grid-template-rows: auto 1fr auto;
}

.pageMargin {
  padding-left: 1rem;
  padding-right: 1rem;
}

/* =========================================== */
/* LAYOUTS / header */
/* =========================================== */
header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: stretch;
      -ms-flex-align: stretch;
          align-items: stretch;
}

.header-head {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
}

/* =========================================== */
/* LAYOUTS / main */
/* =========================================== */
main {
  width: 100%;
  padding-bottom: 2rem;
}

/* =========================================== */
/* LAYOUTS / aside */
/* =========================================== */
/* =========================================== */
/* LAYOUTS / footer */
/* =========================================== */
footer {
  padding-bottom: 4rem;
  height: fit-content(100%);
}

.album {
  margin: 0 1rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
/* ... */

